--- a/MeuDinheiro/src/main/resources/templates/orcamento.html
+++ b/MeuDinheiro/src/main/resources/templates/orcamento.html
@@ -62,6 +62,7 @@
         <input type="date" id="end-date" name="end-date" required />
       </div>
       <button type="submit">Adicionar Orçamento</button>
+      <button onclick="window.location.href='conta.html'">Voltar</button>
     </form>
 
     <script>
