--- a/MeuDinheiro/src/main/resources/templates/login.html
+++ b/MeuDinheiro/src/main/resources/templates/login.html
@@ -20,6 +20,7 @@
         <div class="link">
             <p>Não tem cadastro? <a href="">Cadastre-se aqui</a></p>
         </div>
+        <button onclick="window.location.href='conta.html'">Voltar</button>
     </div>
 </body>
 </html>
